--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="popup.css">
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" type="text/css" href="popup.css" />
 </head>
 
 <body>
@@ -17,15 +17,21 @@
 
   <div class="columns is-mobile">
     <div id="Home" class="column is-10 is-offset-1 content-tab">
-
       <div class="block">
         <h2 class="title is-2 has-text-centered">Link Off</h2>
-        <p class="subtitle has-text-centered">by <a href="https://www.linkedin.com/in/njelich/">Noah Jelich</a>
+        <p class="subtitle has-text-centered">
+          by <a href="https://www.linkedin.com/in/njelich/">Noah Jelich</a>
         </p>
       </div>
 
       <div class="container onoffswitch mb-5">
-        <input type="checkbox" class="onoffswitch-checkbox" id="main-toggle" tabindex="0" checked>
+        <input
+          type="checkbox"
+          class="onoffswitch-checkbox"
+          id="main-toggle"
+          tabindex="0"
+          checked
+        />
         <label class="onoffswitch-label" for="main-toggle">
           <span class="onoffswitch-inner"></span>
           <span class="onoffswitch-switch"></span>
@@ -33,39 +39,40 @@
       </div>
 
       <div class="field has-text-centered">
-        <input id="gentle-mode" class="switch is-rounded" type="checkbox">
+        <input id="gentle-mode" class="switch is-rounded" type="checkbox" />
         <label for="gentle-mode">Gentle mode (dim)</label>
       </div>
 
       <div class="field has-text-centered">
-        <input id="dark-mode" class="switch is-rounded" type="checkbox">
+        <input id="dark-mode" class="switch is-rounded" type="checkbox" />
         <label for="dark-mode">Use dark mode (saves eyes)</label>
       </div>
 
       <div class="content has-text-centered">
         <p>
-          <strong>Link Off - LinkedIn Filter and Customizer</strong> by <a href="https://jelich.cc">Noah Jelich</a>. The
-          source code is licensed
-          <a href="http://opensource.org/licenses/mit-license.php">MIT</a> and available on <a
-            href="https://github.com/njelich/LinkOff">my github</a>. Add me on <a
-            href="https://www.linkedin.com/in/njelich/">LinkedIn</a> or <a href='https://ko-fi.com/G2G547IJY'
-            target='_blank'> Buy me a Coffee</a>
+          <strong>Link Off - LinkedIn Filter and Customizer</strong> by
+          <a href="https://jelich.cc">Noah Jelich</a>. The source code is
+          licensed
+          <a href="http://opensource.org/licenses/mit-license.php">MIT</a> and
+          available on
+          <a href="https://github.com/njelich/LinkOff">my github</a>. Add me on
+          <a href="https://www.linkedin.com/in/njelich/">LinkedIn</a> or
+          <a href="https://ko-fi.com/G2G547IJY" target="_blank">
+            Buy me a Coffee</a
+          >
         </p>
       </div>
-
     </div>
   </div>
 
-
-
   <div id="Feed" class="px-4 pb-6 content-tab">
     <div class="field">
-      <input id="hide-whole-feed" class="switch" type="checkbox">
+      <input id="hide-whole-feed" class="switch" type="checkbox" />
       <label for="hide-whole-feed">Hide the whole feed</label>
     </div>
 
     <div class="field">
-      <input id="sort-by-recent" class="switch" type="checkbox">
+      <input id="sort-by-recent" class="switch" type="checkbox" />
       <label for="sort-by-recent">Sort posts by recent</label>
     </div>
 
@@ -107,13 +114,21 @@
     <div class="columns is-mobile">
       <div class="column is-half">
         <div class="field">
-          <input id="hide-by-people" class="switch is-rounded" type="checkbox" />
+          <input
+            id="hide-by-people"
+            class="switch is-rounded"
+            type="checkbox"
+          />
           <label for="hide-by-people">By people</label>
         </div>
       </div>
       <div class="column is-half">
         <div class="field">
-          <input id="hide-by-companies" class="switch is-rounded" type="checkbox" />
+          <input
+            id="hide-by-companies"
+            class="switch is-rounded"
+            type="checkbox"
+          />
           <label for="hide-by-companies">By companies</label>
         </div>
       </div>
@@ -122,7 +137,11 @@
     <div class="divider">Hide by keywords</div>
 
     <div class="field">
-      <input id='hide-by-keywords' placeholder='Add keywords' class='tagify--outside'>
+      <input
+        id="hide-by-keywords"
+        placeholder="Add keywords"
+        class="tagify--outside"
+      />
     </div>
 
     <div class="divider">Hide post by interactions</div>
@@ -133,7 +152,11 @@
     </div>
 
     <div class="field">
-      <input id="hide-other-reactions" class="switch is-rounded" type="checkbox" />
+      <input
+        id="hide-other-reactions"
+        class="switch is-rounded"
+        type="checkbox"
+      />
       <label for="hide-other-reactions">Hide with other reactions</label>
     </div>
 
@@ -159,71 +182,79 @@
         <option value="month">a month</option>
       </select>
     </div>
-
   </div>
 
   <div id="Jobs" class="px-4 pb-4 content-tab">
-
     <div class="block">
       <h2 class="title is-2 has-text-centered">COMING SOON</h2>
-      <p class="has-text-centered">I'm working hard on writing the new features in this category. If you'd like to help,
-        please make a feature request on <a href="https://github.com/njelich/LinkOff">github</a> or share the extension
-        with your colleagues.</p>
+      <p class="has-text-centered">
+        I'm working hard on writing the new features in this category. If you'd
+        like to help, please make a feature request on
+        <a href="https://github.com/njelich/LinkOff">github</a> or share the
+        extension with your colleagues.
+      </p>
     </div>
-
   </div>
 
   <div id="Misc" class="px-4 pb-4 content-tab">
+    <div class="field">
+      <input id="disable-postcount-prompt" class="switch" type="checkbox" />
+      <label for="disable-postcount-prompt"
+        >Disable post count prompt for feed</label
+      >
+    </div>
 
     <div class="divider">Other hideables</div>
 
     <div class="field">
-      <input id="hide-linkedin-learning" class="switch" type="checkbox">
+      <input id="hide-linkedin-learning" class="switch" type="checkbox" />
       <label for="hide-linkedin-learning">Hide LinkedIn learning courses</label>
     </div>
 
     <div class="field">
-      <input id="hide-advertisements" class="switch" type="checkbox">
+      <input id="hide-advertisements" class="switch" type="checkbox" />
       <label for="hide-advertisements">Hide all advertisements</label>
     </div>
 
     <div class="field">
-      <input id="hide-follow-recommendations" class="switch" type="checkbox">
-      <label for="hide-follow-recommendations">Hide follow recommendations</label>
+      <input id="hide-follow-recommendations" class="switch" type="checkbox" />
+      <label for="hide-follow-recommendations"
+        >Hide follow recommendations</label
+      >
     </div>
 
     <div class="field">
-      <input id="hide-community-panel" class="switch" type="checkbox">
+      <input id="hide-community-panel" class="switch" type="checkbox" />
       <label for="hide-community-panel">Hide community panel</label>
     </div>
 
     <div class="field">
-      <input id="hide-account-building" class="switch" type="checkbox">
+      <input id="hide-account-building" class="switch" type="checkbox" />
       <label for="hide-account-building">Hide account building prompts</label>
     </div>
 
     <div class="field">
-      <input id="hide-premium" class="switch" type="checkbox">
+      <input id="hide-premium" class="switch" type="checkbox" />
       <label for="hide-premium">Hide LinkedIn premium prompts</label>
     </div>
 
     <div class="field">
-      <input id="hide-news" class="switch" type="checkbox">
+      <input id="hide-news" class="switch" type="checkbox" />
       <label for="hide-news">Hide LinkedIn News</label>
     </div>
 
     <div class="block pt-4">
       <h2 class="title is-2 has-text-centered">WORK IN PROGRESS</h2>
-      <p class="has-text-centered">I'm working hard on writing the new features in this category. If you'd like to help,
-        please make a feature request on <a href="https://github.com/njelich/LinkOff">github</a> or share the extension
-        with your colleagues.</p>
+      <p class="has-text-centered">
+        I'm working hard on writing the new features in this category. If you'd
+        like to help, please make a feature request on
+        <a href="https://github.com/njelich/LinkOff">github</a> or share the
+        extension with your colleagues.
+      </p>
     </div>
-
   </div>
 
-  <link href="../lib/tagify.css" rel="stylesheet" type="text/css">
+  <link href="../lib/tagify.css" rel="stylesheet" type="text/css" />
   <script language="javascript" src="../lib/tagify.min.js"></script>
   <script language="javascript" src="popup.js"></script>
 </body>
-
-</html>
